minor adjustments on contacts to prevent showing overflow

--- a/assets/css/contact_dialog_style--av.css
+++ b/assets/css/contact_dialog_style--av.css
@@ -32,6 +32,7 @@ body {
     left: 0;
     right: 0;
     z-index: 2;
+    overflow: hidden;
   }
   
   .dialog-container {
